fix: remove footer margin-top and add padding-bottom to publicMain to fix white gap

--- a/components/public/layout/Footer.module.scss
+++ b/components/public/layout/Footer.module.scss
@@ -3,7 +3,6 @@
 .footer {
   background-color: var(--bibliaris-green);
   color: var(--bibliaris-green-foreground);
-  margin-top: $spacing-xxl;
   width: 100%;
 }
 
