--- a/styles/layouts.module.scss
+++ b/styles/layouts.module.scss
@@ -26,6 +26,7 @@
 
 .publicMain {
   flex: 1;
+  padding-bottom: $spacing-xxl;
 }
 
 .publicFooter {
